Fixed some markdown text
Cleaned up presentation of jupyter notebook

--- a/task2.ipynb
+++ b/task2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertManyResult at 0x113d17c4160>"
+       "<pymongo.results.InsertManyResult at 0x113d16c3ca0>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x113d167c6a0>"
+       "<pymongo.results.UpdateResult at 0x113d0307970>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,37 +127,6 @@
     ")\n",
     "\n",
     "#str to array\n",
-    "# db.Insurance.aggregate(\n",
-    "#      [\n",
-    "#         { \"$project\": { \n",
-    "#             \"healthRiders\": { \n",
-    "#                 \"$cond\": [ \n",
-    "#                     { \"$eq\": [ \n",
-    "#                         { \"$type\": \"$HealthRiders\" }, \n",
-    "#                         \"string\"\n",
-    "#                     ]}, \n",
-    "#                     { \"$split\": [ \"$HealthRiders\", \",\" ] }, \n",
-    "#                     \"$HealthRiders\" \n",
-    "#                 ]\n",
-    "#             }, \n",
-    "#             \"is45OrOlder\": 1,\n",
-    "#             \"isMarried\": 1,\n",
-    "#             \"hasKids\": 1,\n",
-    "#             \"insuredMonths\": 1,\n",
-    "#             \"termLifeInsurance\": 1,\n",
-    "#             \"multipletermLifePolicies\": 1,\n",
-    "#             \"healthInsurance\": 1,\n",
-    "#             \"healthRiders\": 1,\n",
-    "#             \"premiumFrequency\": 1,\n",
-    "#             \"eStatements\": 1,\n",
-    "#             \"monthlyPremium\": 1, \n",
-    "#             \"totalPremium\": 1, \n",
-    "#             \"renewal\": 1,        \n",
-    "#         }},\n",
-    "#         { \"$out\": \"Insurance\" }\n",
-    "#     ]\n",
-    "# )\n",
-    "\n",
     "db.Insurance.update_many(\n",
     "  {'healthRiders': {'$type': 2}},\n",
     "  [{ '$set': { 'healthRiders': { \"$split\": [ \"$healthRiders\", \",\" ] } } }],\n",
